--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "14.15.0"
+    "node": ">=14.15.0"
   },
   "cacheDirectories": [
     "node_modules",
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.3",
+    "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
