--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "client": "cd client && npm start",
     "postinstall": "cd client && npm install",
     "build": "NODE_ENV=production cd client/ && npm install && npm run build",
-    "heroku-postbuild": "cd client && npm install && npm run build",
     "start-server": "node index.js"
   },
   "keywords": [],
@@ -29,6 +28,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "concurrently": "^6.0.1",
     "nodemon": "^2.0.20"
   }
 }
