--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start:dev": "nodemon index.js",
     "server": "nodemon index.js",
     "client": "cd client && npm start",
     "postinstall": "cd client && npm install",
