--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   ],
   "scripts": {
     "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "start:dev": "nodemon index.js",
     "server": "nodemon index.js",
     "client": "cd client && npm start",
     "postinstall": "cd client && npm install",
-    "build": "NODE_ENV=production cd client/ && npm install && npm run build",
+    "build": "cd client/ && npm install && npm run build",
     "start-server": "node index.js"
   },
   "keywords": [],
