--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "server": "nodemon index.js",
     "client": "cd client && npm start",
     "postinstall": "cd client && npm install",
-    "build": "cd client/ && npm install && npm run build",
+    "build": "NODE_ENV=production cd client/ && npm install && npm run build",
     "start-server": "node index.js"
   },
   "keywords": [],
@@ -25,7 +25,8 @@
     "axios": "^1.2.3",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "concurrently": "^7.6.0",
