--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "client": "cd client && npm start",
     "postinstall": "cd client && npm install",
     "build": "NODE_ENV=production cd client/ && npm install && npm run build",
+    "deploy": "gh-pages -d build",
     "start-server": "node index.js"
   },
   "keywords": [],
